fix events on today should not be invisible close #44

--- a/themes/oden/sass/pages/_events.scss
+++ b/themes/oden/sass/pages/_events.scss
@@ -16,15 +16,6 @@
   {
     display: none;
   }
-  td.has-event
-  {
-    background: #adb8be;
-  }
-  td.has-oden-event
-  {
-    background: $purple;
-    color: white;
-  }
   td.no-entry
   {
     background: none;
@@ -52,6 +43,16 @@
   .month-view .full tr td.single-day.today
   {
     border: 3px solid $purple;
+  }
+  
+  .month-view .full tr td.has-event
+  {
+    background: #adb8be;
+  }
+  .month-view .full tr td.has-oden-event
+  {
+    background: $purple;
+    color: white;
   }
   .inner .month-date
   {
